crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__shortenings-in-words.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "fra",
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "fra",
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "fra"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "fra"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Words with shortenings (parenthesized content within words)",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: shortening inside word body, e.g., parc(e), parcequ(e)",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Source: French child speech corpora",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "parce",
              "content": [
                {
                  "content": "parc",
                  "type": "text"
                },
                {
                  "content": "e",
                  "type": "shortening"
                }
              ],
              "raw_text": "parc(e)",
              "type": "word"
            },
            {
              "cleaned_text": "qu'il",
              "content": [
                {
                  "content": "qu'il",
                  "type": "text"
                }
              ],
              "raw_text": "qu'il",
              "type": "word"
            },
            {
              "cleaned_text": "veut",
              "content": [
                {
                  "content": "veut",
                  "type": "text"
                }
              ],
              "raw_text": "veut",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "parceque",
              "content": [
                {
                  "content": "parcequ",
                  "type": "text"
                },
                {
                  "content": "e",
                  "type": "shortening"
                }
              ],
              "raw_text": "parcequ(e)",
              "type": "word"
            },
            {
              "cleaned_text": "tu",
              "content": [
                {
                  "content": "tu",
                  "type": "text"
                }
              ],
              "raw_text": "tu",
              "type": "word"
            },
            {
              "cleaned_text": "veux",
              "content": [
                {
                  "content": "veux",
                  "type": "text"
                }
              ],
              "raw_text": "veux",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "don't",
              "content": [
                {
                  "content": "do",
                  "type": "text"
                },
                {
                  "content": "n't",
                  "type": "shortening"
                }
              ],
              "raw_text": "do(n't)",
              "type": "word"
            },
            {
              "cleaned_text": "know",
              "content": [
                {
                  "content": "know",
                  "type": "text"
                }
              ],
              "raw_text": "know",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "fra"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "fra"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
