crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__sin-groupings.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Lydia",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Mother_of_Lydia",
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;01.06",
        "corpus": "gesture",
        "group": "hearingloss",
        "language": "eng",
        "role": "Target_Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "gesture",
        "language": "eng",
        "role": "Mother",
        "sex": "female",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "sin-groupings",
        "media_type": "video",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "sin groupings",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "content": "g:toy:dpoint",
                "type": "token"
              },
              {
                "content": "b",
                "type": "token"
              },
              {
                "content": [
                  "c",
                  "d"
                ],
                "type": "sin_group"
              },
              {
                "content": "e",
                "type": "token"
              }
            ]
          },
          "type": "Sin"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 24870,
            "start_ms": 23317
          },
          "content": [
            {
              "type": "annotated_action"
            },
            {
              "content": [
                {
                  "content": "foo",
                  "type": "text"
                }
              ],
              "raw_text": "foo",
              "span": {
                "end": 265,
                "start": 262
              },
              "type": "word"
            },
            {
              "type": "annotated_action"
            },
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "bar",
                        "type": "text"
                      }
                    ],
                    "raw_text": "bar",
                    "span": {
                      "end": 274,
                      "start": 271
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "baz",
                        "type": "text"
                      }
                    ],
                    "raw_text": "baz",
                    "span": {
                      "end": 278,
                      "start": 275
                    },
                    "type": "word"
                  }
                ]
              },
              "type": "sin_group"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;01.06",
        "corpus": "gesture",
        "group": "hearingloss",
        "language": "eng",
        "role": "Target_Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": "Lydia",
      "role": "Target_Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "gesture",
        "language": "eng",
        "role": "Mother",
        "sex": "female",
        "speaker": "MOT"
      },
      "name": "Mother_of_Lydia",
      "role": "Mother"
    }
  }
}
