crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__sin-zero.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Lydia",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Mother_of_Lydia",
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;01.06",
        "corpus": "gesture",
        "group": "hearingloss",
        "language": "eng",
        "role": "Target_Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "gesture",
        "language": "eng",
        "role": "Mother",
        "sex": "female",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "sin-zero",
        "media_type": "video",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "content": "0",
                "type": "token"
              },
              {
                "content": "0",
                "type": "token"
              },
              {
                "content": "0",
                "type": "token"
              },
              {
                "content": "0",
                "type": "token"
              }
            ]
          },
          "type": "Sin"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 5300,
            "start_ms": 1
          },
          "content": [
            {
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "span": {
                "end": 235,
                "start": 231
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "shall",
                  "type": "text"
                }
              ],
              "raw_text": "shall",
              "span": {
                "end": 241,
                "start": 236
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "we",
                  "type": "text"
                }
              ],
              "raw_text": "we",
              "span": {
                "end": 244,
                "start": 242
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "get",
                  "type": "text"
                }
              ],
              "raw_text": "get",
              "span": {
                "end": 248,
                "start": 245
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;01.06",
        "corpus": "gesture",
        "group": "hearingloss",
        "language": "eng",
        "role": "Target_Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": "Lydia",
      "role": "Target_Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "gesture",
        "language": "eng",
        "role": "Mother",
        "sex": "female",
        "speaker": "MOT"
      },
      "name": "Mother_of_Lydia",
      "role": "Mother"
    }
  }
}
