crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__sin.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "sin",
        "media_type": "video",
        "status": "unlinked",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Sign language tier with gesture entries and groupings",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: sin_dependent_tier, sin_tier_prefix, sin_word,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "sin_group, sin_grouped_content, sin_groups",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "content": "0",
                "type": "token"
              },
              {
                "content": "0",
                "type": "token"
              },
              {
                "content": "0",
                "type": "token"
              },
              {
                "content": "0",
                "type": "token"
              }
            ]
          },
          "type": "Sin"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "what",
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "type": "word"
            },
            {
              "cleaned_text": "shall",
              "content": [
                {
                  "content": "shall",
                  "type": "text"
                }
              ],
              "raw_text": "shall",
              "type": "word"
            },
            {
              "cleaned_text": "we",
              "content": [
                {
                  "content": "we",
                  "type": "text"
                }
              ],
              "raw_text": "we",
              "type": "word"
            },
            {
              "cleaned_text": "get",
              "content": [
                {
                  "content": "get",
                  "type": "text"
                }
              ],
              "raw_text": "get",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "content": "g:toy:dpoint",
                "type": "token"
              },
              {
                "content": "gg:toyy:dpointt",
                "type": "token"
              }
            ]
          },
          "type": "Sin"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "junk",
              "content": [
                {
                  "content": "junk",
                  "type": "text"
                }
              ],
              "raw_text": "junk",
              "type": "word"
            },
            {
              "cleaned_text": "here",
              "content": [
                {
                  "content": "here",
                  "type": "text"
                }
              ],
              "raw_text": "here",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "media": {
    "filename": "sin",
    "media_type": "video",
    "status": "unlinked"
  },
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
